feat(ui/deploy): application can be deployed using github deployment API
